<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/root_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="@dimen/poster_cv_elevation"
                app:cardCornerRadius="@dimen/poster_cv_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_tv">

                <ImageView
                    android:id="@+id/poster_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/detail_poster_description"
                    android:scaleType="fitXY"
                    tools:srcCompat="@drawable/placeholder" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/root_cardView"
                app:layout_constraintTop_toBottomOf="@+id/root_cardView"
                tools:text="@string/detail_release_year_tools" />

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/favorites_button"
                app:layout_constraintStart_toEndOf="@+id/release_date_tv"
                app:layout_constraintTop_toBottomOf="@+id/root_cardView"
                tools:text="@string/detail_rating_tools" />

            <ToggleButton
                android:id="@+id/favorites_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/fav_button"
                android:checked="false"
                android:contentDescription="@string/detail_fav_button_description"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/rating_tv"
                app:layout_constraintEnd_toEndOf="@+id/root_cardView"
                app:layout_constraintTop_toTopOf="@+id/rating_tv" />

            <TextView
                android:id="@+id/overview_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/detail_overview_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />

            <TextView
                android:id="@+id/overView_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/overview_label_tv"
                app:layout_constraintTop_toBottomOf="@+id/overview_label_tv"
                tools:text="@string/detail_overview_tools" />

            <include
                android:id="@+id/review_layout"
                layout="@layout/detailed_review_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/overView_tv"
                app:layout_constraintStart_toStartOf="@+id/overView_tv"
                app:layout_constraintTop_toBottomOf="@+id/overView_tv" />

            <include
                android:id="@+id/video_layout"
                layout="@layout/detailed_video_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/review_layout"
                app:layout_constraintTop_toBottomOf="@+id/review_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>